# gpmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: build.cmake  conan.cmake  config.cmake  sanitizer.cmake  tests.cmake
src/: CMakeLists.txt  main.cpp  main2.cpp
src/core/: queue.hpp
tests/: CMakeLists.txt  test_queue.cpp
